# Internal-Developer-Platform-IDP

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/agent/: __init__.py  ollama_client.py  planner.py
app/api/: middleware.py  routes.py
app/core/: config.py  logging.py  request_context.py  security.py
app/db/: session.py
app/models/: models.py
app/platform/: guardrails.py
app/schemas/: domain.py
app/services/: audit.py  deployment.py  jobs.py  service.py
src/: agent_cli.py
tests/: test_agent.py  test_api.py  test_guardrails.py
