[project]
name = "internal-developer-platform-idp"
version = "0.1.0"
requires-python = ">=3.10"
description = "Internal Developer Platform backend"
readme = "README.md"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
